--- a/ui/main.html
+++ b/ui/main.html
@@ -8,19 +8,12 @@
 </head>
 <body>
 <div class="chat-container">
-    <h2>Chats</h2>
+    <h2>Users</h2>
     <div class="chat-list">
-        <div class="chat-item">
-            <span class="chat-name">User 1</span>
-        </div>
-        <div class="chat-item">
-            <span class="chat-name">User 2</span>
-        </div>
-        <div class="chat-item">
-            <span class="chat-name">User 3</span>
-        </div>
         <!-- Добавьте больше чатов здесь -->
     </div>
 </div>
+
+<script src="main_script.js"></script>
 </body>
 </html>
